observaciones de Myriam

--- a/lec_01.tex
+++ b/lec_01.tex
@@ -6,7 +6,7 @@
 \markboth{Introducción}{Introducción}
 \addcontentsline{toc}{section}{Introducción}
 
-En 1640 Fermat afirmó que poseía una demostración del hecho de que si $p$ es un número primo y $x$ es cualquier entero no divisible por $p$, entonces $x^{p-1}-1$ es divisible por $p$. Ahora llamado Teorema de Fermat, es uno de los teoremas fundamentales de la teoría de números. Este resultado fue generalizado más tarde por Euler en 1760: si $\varphi(n)$ denota el número de enteros positivos no mayores a $n$ que son primos relativos a $n$, entonces $x^{\varphi(n)-1}-1$ es divisible por $p$.
+En 1640 Fermat afirmó que poseía una demostración del hecho de que si $p$ es un número primo y $x$ es cualquier entero no divisible por $p$, entonces $x^{p-1}-1$ es divisible por $p$. Ahora llamado Teorema de Fermat, es uno de los teoremas fundamentales de la teoría de números. Este resultado fue generalizado más tarde por Euler en 1760: si $n$ es un entero positivo y $\varphi(n)$ denota el número de enteros positivos no mayores a $n$ que son primos relativos a $n$, entonces $x^{\varphi(n)-1}-1$ es divisible por $n$.
 Aunque la función $\varphi$ de Euler se definió para enunciar la generalización anterior, ésta posee remarcables propiedades que hacen valer la pena estudiarla por sí misma. Gauss (1801) probó que si $n\in\mathbb{N}$ y $d_1,d_2,\cdots,d_k$ son todos los divisores positivos de $n$, entonces $\varphi(d_1)+\varphi(d_2)+\cdots+\varphi(d_k)=n$.
 \bigskip
 
@@ -15,7 +15,7 @@ Por otro lado, en 1832 A. F. Möbius definió la función $\mu(n)$ como cero si 
     F(x) = \sum_{s=1}^{\infty} \frac{f(s x)}{s^n} \text{ implica } f(x) = \sum_{s=1}^{\infty} \mu(s) \frac{F(s x)}{s^n}.
 \end{equation*}
 
-Dedekind (1857) probó que si $F(m) = \sum f(d)$, donde $d$ recorre todos los divisores positivos de $m$, entonces
+Dedekind (1857) probó que si $F(n) = \sum f(d)$, donde $d$ recorre todos los divisores positivos de $n$, entonces
 \begin{equation*}
     f(n) = F(n) - \sum F \left( \frac{n}{a} \right) + \sum F \left(  \frac{n}{a b} \right) - \sum F \left( \frac{n}{a b c} \right) + \cdots,
 \end{equation*}
@@ -44,15 +44,15 @@ Bell (1928), llamó a una función $f(x)$ \emph{función numérica} si $f(1) \ne
 
 Asimismo, Bell consideró la función \textit{unidad}, aquí llamada \emph{identidad} (\cref{def:str2}), $\varepsilon(x)$ definida como $\varepsilon(1)=1$ y $\varepsilon(n)=0$ para cada $n>1$ y probó que para cualquier función numérica $f$ existe otra función numérica $f'$ tal que
 \begin{equation*}
-    \sum f(d) f'(d) = \varepsilon(n) \tag{$n=1,2,3,\ldots$},
+    \sum f(d) f'(\delta) = \varepsilon(n) \tag{$n=1,2,3,\ldots$},
 \end{equation*}
 donde la suma se extiende sobre todos los pares de enteros $(d,\delta)$ tales que $d,\delta >0$ y $n = d \delta$, y llama a $f'(x)$ la \textit{recíproca} de $f(x)$.
 \bigskip
 
-El lector con conocimiento básico de álgebra abstracta puede comenzar a identificar lo que está sucediendo aquí. La función $\varepsilon$ está actuando como la identidad respecto a la operación de anterior, es decir, hasta ahora el conjunto de funciones aritméticas contituye un monoide. ¿Será esta operación también asociativa o conmutativa? La repuesta a estas preguntas es afirmativa y más aún, con la operación de suma de funciones punto a punto, este conjunto forma un anillo conmutativo con identidad. Y lo que es más, resulta ser también un dominio entero y de factorización única. En el primer capítulo, el objetivo de este trabajo es presentar algunos resultados sobre la esctructura del anillo de funciones aritméticas en el lenguage del álgebra abstracta y se pueden encontrar en \cite{Ca1959, Nish1, Bell1}. Después, se exponen varios isomorfismos entre los subgrupos del anillo de funciones aritméticas, aditivos y multiplicativos, entre ellos el subgrupo de funciones multiplicativas y el de funciones aritméticas real-valuadas. Al final de este capítulo se presentan algunas funciones aritméticas conocidas y algunas relaciones entre ellas, derivadas fácilmente con los resultados probados en las secciones anteriores y estos resultados están en \cite{Rea1}.
+El lector con conocimiento básico de álgebra abstracta puede comenzar a identificar lo que está sucediendo aquí. La función $\varepsilon$ está actuando como identidad respecto a la operación anterior. ¿Será esta operación también asociativa o conmutativa? La repuesta a estas preguntas es afirmativa y más aún, con la operación de suma de funciones punto a punto, este conjunto forma un anillo conmutativo con identidad. Y lo que es más, resulta ser también un dominio entero y de factorización única. En el primer capítulo, el objetivo de este trabajo es presentar algunos resultados sobre la esctructura del anillo de funciones aritméticas en el lenguage del álgebra abstracta y se pueden encontrar en \cite{Ca1959, Nish1, Bell1}. Después, se exponen varios isomorfismos entre los subgrupos del anillo de funciones aritméticas, aditivos y multiplicativos, entre ellos el subgrupo de funciones multiplicativas y el de funciones aritméticas real-valuadas. Al final de este capítulo se presentan algunas funciones aritméticas conocidas y algunas relaciones entre ellas, derivadas fácilmente con los resultados probados en las secciones anteriores y estos resultados están en \cite{Rea1}.
 \bigskip
 
-En el segundo capítulo se presentan dos clases de funciones, las funciones aritméticas \emph{periódicas}, en el sentido usual de periodicidad, y las funciones \emph{pares}, una subclase muy especial de las funciones periódicas y son tales que $f(n)=f((n,r)), \forall n \in \mathbb{N}$, donde $r \in \mathbb{N}$ es fijo y $(n,r)$ es el máximo común divisor de $n$ y $r$. Se introducen las sumas de Ramanujan como funciones pares y se presenta una teoría análoga a la teoría de Fourier del análisis real que recae únicamente en las propiedades de divisibilidad de los enteros. Específicamente, se prueba que toda función par tiene una expansión de Fourier finita con sumas de Ramanujan como coeficientes y se prueba que ésta representación puede ser derivada de un producto interno en el espacio de funciones aritméticas pares. Los resultados presentados en este capítulo se pueden encontrar en \cite{Coh1, Knopf1, Knopf2, Murty1}.
+En el segundo capítulo se presentan dos clases de funciones, las funciones aritméticas \emph{periódicas}, en el sentido usual de periodicidad, y las funciones \emph{pares}, una subclase muy especial de las funciones periódicas y son tales que $f(n)=f((n,r)), \forall n \in \mathbb{N}$, donde $r \in \mathbb{N}$ es fijo y $(n,r)$ es el máximo común divisor de $n$ y $r$. Se introducen las sumas de Ramanujan como funciones pares y se presenta una teoría análoga a la teoría de Fourier del análisis real que recae únicamente en las propiedades de divisibilidad de los enteros. Específicamente, se prueba que toda función par tiene una expansión de Fourier finita con sumas de Ramanujan como coeficientes y se prueba que esta representación puede ser derivada de un producto interno en el espacio de funciones aritméticas pares. Los resultados presentados en este capítulo se pueden encontrar en \cite{Coh1, Knopf1, Knopf2, Murty1}.
 \bigskip
 
-En el último capítulo se presenta una aplicación de los resultados expuestos en el segundo capítulo. Se presentan las señales \textit{simétricas}, que son funciones $x : \mathbb{Z} \longrightarrow \mathbb{C}$ tales que $x(n) = x(r-n), \forall n \in \mathbb{Z}$ y $r \in \mathbb{N}$ fijo y una subclase de éstas señales, las señales \textit{pares}, que son una extensión de las funciones aritméticas pares a $\mathbb{Z}$. Se prueba que la Transformada Discreta de Fourier de una señal par se puede calcular usando las sumas de Ramanujan. Estos resultados se pueden consultar en \cite{Prand1, Sam1}.
+En el último capítulo se presenta una aplicación de los resultados expuestos en el segundo capítulo. Se presentan las señales \textit{simétricas}, que son funciones $x : \mathbb{Z} \longrightarrow \mathbb{C}$ tales que $x(n) = x(r-n), \forall n \in \mathbb{Z}$ y $r \in \mathbb{N}$ fijo y una subclase de estas señales, las señales \textit{pares}, que son una extensión de las funciones aritméticas pares a $\mathbb{Z}$. Se prueba que la Transformada Discreta de Fourier de una señal par se puede calcular usando las sumas de Ramanujan. Estos resultados se pueden consultar en \cite{Prand1, Sam1}.
